@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 12/25/2014 ==
+Uleat: Updated 'links' code for all clients
+
 == 12/24/2014 ==
 Trevius: (RoF+) Added herosforgemodel field to the npc_types table.
 Trevius: (RoF2) Updated item links from #npcstat command output.
